<resources>
    <string name="app_name">RealEstateManager</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_a_real_estate_property">Add a realEstateProperty</string>
    <string name="agentName">Select agent</string>
    <string name="create_new_real_estate">ADD A REAL ESTATE:</string>
    <string name="typeOfProperty">Select type</string>
    <string name="parkChip">Park</string>
    <string name="schoolChip">School</string>
    <string name="grocery_store_chip">Grocery Store</string>
    <string name="shopping_mall_chip">Shopping mall</string>
    <string name="hospitalChip">Hospital</string>
    <string name="surface">Surface</string>
    <string name="numberOfRoom">room(s)</string>
    <string name="bathroom">Number of Bathroom</string>
    <string name="room">Number of Room</string>
    <string name="bedroom">Number of Bedroom</string>
    <string name="description">\u0020  Description:</string>
    <string name="descriptionHint">Add a description here…</string>
    <string name="pointOfInterest">\u0020 Point of interest nearby:</string>
    <string name="surfaceUnit">m²</string>
    <string name="add_pictures">\u0020 Pictures:</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="state">Country/State</string>
    <string name="zipCode">Zip code</string>
    <string name="select_sale_date"><![CDATA[ SELECT SALE DATE ]]></string>
    <string name="select_market_entry_date"><![CDATA[ SELECT MARKET ENTRY DATE ]]></string>
    <string name="dialog_fragment_add_pictures">ADD PICTURES\nFROM GALLERY</string>
    <string name="dialog_fragment_take_photo">TAKE PHOTO\nWITH PHONE</string>
    <string name="select_methode">SELECT METHODE</string>
    <string name="price">Price</string>
    <string name="priceUnit">$</string>
    <string name="error_camera_permission">Camera permission was denied. Unable to take a picture.</string>
    <string name="no_picture_selected">No picture selected</string>
    <string name="empty_picture">NO IMAGE</string>
    <string name="x_picture_selected">NEW PICTURE(S)</string>
    <string name="enterNewName">NEW NAME:</string>
    <string name="name_too_short">Name is too short</string>
    <string name="cancel">CANCEL</string>
    <string name="save">SAVE</string>
    <string name="please_provide_all_infos">Please provide all needed infos.</string>
    <string name="cant_insert_real_estate">Unable to add or update the real estate.</string>
    <string name="search">Search…</string>
    <string name="error_search_empty">Nothing to search.</string>
    <string name="entryDate">SELECT MARKET ENTRY DATE</string>
    <string name="saleDate">SELECT SALE DATE</string>
    <string name="closePOI">Close</string>
    <string name="parkPOI">Park</string>
    <string name="grocery_store_POI">Grocery Store</string>
    <string name="shopping_mall_poi">Shopping mall</string>
    <string name="hospitalPOI">Hospital</string>
    <string name="schoolPOI">School</string>
    <string name="media">\u0020 Media \u0020</string>
    <string name="descriptionDetails">\u0020 Description \u0020</string>
    <string name="infos">\u0020 Infos \u0020</string>
    <string name="error_location_permission">Location permission denied.</string>
    <string name="my_position_marker">Current position</string>
    <string name="simulateYourLoan">SIMULATE YOUR LOAN:</string>
    <string name="contribution">Enter contribution amount (in dollars)</string>
    <string name="interestRate">Enter interest rate (in %)</string>
    <string name="loanTerm">Enter loan term (in years)</string>
    <string name="pressIcon">Press the icon to simulate the loan.</string>
    <string name="add_success">Real estate saved.</string>
</resources>