<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_infos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="0dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/frag_infos_field_cl"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/frag_infos_field_til_surface"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginTop="@dimen/textview_8dp"
            android:textColorHint="@color/black"
            app:boxStrokeWidth="@dimen/stroke2"
            app:boxStrokeWidthFocused="@dimen/stroke2"
            app:boxStrokeColor="@color/textinputlayout_tint_selector"
            app:hintTextColor="@color/textinputlayout_tint_selector"
            app:layout_constraintEnd_toStartOf="@id/frag_infos_field_tv_m2"
            app:layout_constraintStart_toStartOf="@id/frag_infos_field_cl"
            app:layout_constraintTop_toTopOf="@id/frag_infos_field_cl">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textCursorDrawable="@drawable/cursor"
                android:hint="@string/price"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/frag_infos_field_tv_m2"
            style="?attr/textAppearanceHeadline6"
            android:layout_width="@dimen/textview_100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/textview_8dp"
            android:gravity="center"
            android:paddingStart="@dimen/textview_8dp"
            android:paddingEnd="@dimen/depth"
            android:text="@string/priceUnit"
            android:textColor="@color/black"
            android:textSize="@dimen/title_textSize"
            app:layout_constraintBottom_toBottomOf="@id/frag_infos_field_til_surface"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/frag_infos_field_til_surface" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/frag_infos_field_til_room"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fab_margin"
            android:textColorHint="@color/black"
            app:boxStrokeWidth="@dimen/stroke2"
            app:boxStrokeWidthFocused="@dimen/stroke2"
            app:boxStrokeColor="@color/textinputlayout_tint_selector"
            app:hintTextColor="@color/textinputlayout_tint_selector"
            app:layout_constraintEnd_toStartOf="@id/frag_infos_field_tv_room"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frag_infos_field_til_surface">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textCursorDrawable="@drawable/cursor"
                android:hint="@string/room"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/frag_infos_field_tv_room"
            style="?attr/textAppearanceHeadline6"
            android:layout_width="@dimen/textview_100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/textview_8dp"
            android:gravity="center"
            android:paddingStart="@dimen/textview_8dp"
            android:paddingEnd="@dimen/depth"
            android:text="@string/numberOfRoom"
            android:textColor="@color/black"
            android:textSize="@dimen/title_textSize"
            app:layout_constraintBottom_toBottomOf="@+id/frag_infos_field_til_room"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/frag_infos_field_til_room" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/frag_infos_field_til_bathroom"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fab_margin"
            android:textColorHint="@color/black"
            app:boxStrokeWidth="@dimen/stroke2"
            app:boxStrokeWidthFocused="@dimen/stroke2"
            app:boxStrokeColor="@color/textinputlayout_tint_selector"
            app:hintTextColor="@color/textinputlayout_tint_selector"
            app:layout_constraintEnd_toStartOf="@+id/frag_infos_field_tv_bathroom"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frag_infos_field_til_room">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textCursorDrawable="@drawable/cursor"
                android:hint="@string/bedroom"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/frag_infos_field_tv_bathroom"
            style="?attr/textAppearanceHeadline6"
            android:layout_width="@dimen/textview_100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/textview_8dp"
            android:gravity="center"
            android:paddingStart="@dimen/textview_8dp"
            android:paddingEnd="@dimen/depth"
            android:text="@string/numberOfRoom"
            android:textColor="@color/black"
            android:textSize="@dimen/title_textSize"
            app:layout_constraintBottom_toBottomOf="@+id/frag_infos_field_til_bathroom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/frag_infos_field_til_bathroom" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/frag_infos_field_til_bedroom"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fab_margin"
            android:textColorHint="@color/black"
            app:boxStrokeWidth="@dimen/stroke2"
            app:boxStrokeWidthFocused="@dimen/stroke2"
            app:boxStrokeColor="@color/textinputlayout_tint_selector"
            app:hintTextColor="@color/textinputlayout_tint_selector"
            app:layout_constraintEnd_toStartOf="@+id/frag_infos_field_tv_bedroom"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frag_infos_field_til_bathroom">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textCursorDrawable="@drawable/cursor"
                android:hint="@string/surface"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/frag_infos_field_tv_bedroom"
            style="?attr/textAppearanceHeadline6"
            android:layout_width="@dimen/textview_100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/textview_8dp"
            android:gravity="center"
            android:paddingStart="@dimen/textview_8dp"
            android:paddingEnd="@dimen/depth"
            android:text="@string/surfaceUnit"
            android:textColor="@color/black"
            android:textSize="@dimen/title_textSize"
            app:layout_constraintBottom_toBottomOf="@id/frag_infos_field_til_bedroom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/frag_infos_field_til_bedroom" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>